force-app/main/default/objects/Portal_Session__c/Portal_Session__c.object-meta.xml
<CustomObject>
    <label>Portal Session</label>
    <pluralLabel>Portal Sessions</pluralLabel>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Portal Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>