force-app/main/default/objects/Portal_Session__c/fields/Impersonated_By__c.field-meta.xml
<CustomField>
    <fullName>Impersonated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impersonated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Portal Sessions (Impersonated)</relationshipLabel>
    <relationshipName>Impersonated_Portal_Sessions</relationshipName>
    <type>Lookup</type>
    <description>Salesforce User who initiated "Login as Customer" session</description>
</CustomField>