force-app/main/default/objects/Portal_Session__c/fields/Login_Type__c.field-meta.xml
<CustomField>
    <fullName>Login_Type__c</fullName>
    <label>Login Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Impersonated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>