force-app/main/default/objects/Portal_Session__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <label>Session Duration (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF(
    AND(NOT(ISBLANK(Login_Time__c)), NOT(ISBLANK(Logout_Time__c))),
    (Logout_Time__c - Login_Time__c) * 24 * 60,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
</CustomField>